# c-test

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  source.c  source.h
test/: test.cc
